2006-08.8 Andreas Obergrusberger <tradiaz@yahoo.de> 
	* Avuton fixed some warning
	* fixed a bug that doubled empty lines
	  when loading lyrics from hd

2006-08-7 Andreas Obergrusberger <tradiaz@yahoo.de>
	* bugfixes in lyrics screen
	* ncmpc can now load and save lyrics
	  loading and saving is compatible with gmpc's ~/.lyrics
	* language updates for template and german file

2006-08-6 Andreas Obergrusberger <tradiaz@yahoo.de>
	* fixed a bug in the lyrics screen that made
 	  the first texte line not show up
	* just interrupt running, not upcomming lyrics retrieval

2006-08-5 Andreas Obergrusberger <tradiaz@yahoo.de>
        * the 5th of august... it's dark around me... 
	  there are still flies constantly shitting
          onto my screen's display surface and the search 
          screen works now with new api
          of libmpdclient. enabled by default.
	* building with lyrics screen on gentoo now works... thanks avuton :)
        * updated translation template
        * german lyrics- and search-screen translation added
        * avuton has fixed a lot of warnings
	* fixed a problem with compiling on Arch Linux
	* Added a way to interrupt retrieval of lyrics (ESC)
	 +update of .po files

2006-08-4 Anderas Obergrusberger <tradiaz@yahoo.de>
        * tradiaz is temporary maintainer of a special branch of ncmpc now
          https://svn.musicpd.org/mpd/ncmpc/branches/tradiaz
          the development will go on there till kaw shows up again
          contact him: tradiaz@yahoo.de

        * added a lyrics screen. it downloads and shows lyrics 
	  from leoslyrics.com (storing and reading lyrics to come)
          have a look at the manpage for the lyrics_timeout config file option
        * catching signal SIGHUP now
        * host and port of mpd can be specified in the config file now     
        * libmpdclient update (the experimental search screen 
          is making problems with it)
        * enhanced compatibility of Makefile.am for automake       