@@ -32,6 +32,7 @@ typedef struct
   gboolean visible_bell;       
   gboolean enable_xterm_title; 
   gboolean enable_mouse;
+  gboolean show_splash;
 
 } options_t;
 
